6699669: Hotspot server leaves synchronized block with monitor in bad state

Remove usage of _highest_lock field in Thread so that is_lock_owned won't depend on the correct update of that field.

Reviewed-by: never, dice, acorn